11 July 2007

* Simplify fetching: line counting and body detection is now done globally for
  all fetch types in the mail queuing code, as is checking for empty and 
  oversize mails.
* There is now no concept of a body-less mail (m->body == -1). Mails with
  no separating blank line are assumed to be entirely body (m->body == 0),
  otherwise the body is the first byte after the separator.
* Fix a long-standing bug in openlock (mail.c): if open(2) failed, the lock
  file was not removed.
* NNTPS fetching, suggested by Maximilian Gass.
* After rethinking, remove some useless fclose error checks.

08 July 2007

* Check permissions on include files as well as main configuration file.
* First new parser bug: include files should be subject to tag replacement,
  noticed by Frank Terbeck.

05 July 2007

* Move to rewritten log.c which which makes the syslog/stderr hacks I had made
  to the old version less fugly.

02 July 2007

* If a mail has no body, insert new headers at the start instead of the end.
  This matches formail's behaviour. Requested by Giorgio Lando. Note there is
  no change to the regexp "in body" behaviour, although perhaps there should be.
* Sort out the localtime(3)/strftime(3) mess by actually reading the man page
  and time.h. This means July is now the seventh rather than sixth month. 
  Reported by Giorgio Lando.

29 June 2007

* Split parse helper functions out into parse-fn.c and do lots of other cleanup 
  of parse.y and lex.c.
* New lexer makes ifdef/ifndef/endif possible, although not completely elegant.
  Syntax is: ifdef $macro .... endif. Note that stuff inside ifdefs must still
  be valid syntax!
* Scrap use of lex in favour of custom C lexer. This allows (yet another)
  workaround for include files, to make stuff like this work:

	$host = $(hostname)
	include "file.${host}"

* Combine multiple IMAP deletions together into one command where possible,
  although I doubt it makes any actual difference.

28 June 2007
