@@ -28,9 +28,9 @@
   consistent in some way (closed=1, success=0, error=-1)
 - should time stuff use localtime or gmtime?
 - get rid of IO_POLLFDS limit, and move timeout out of struct io
-- add two digit year, hostname tags
 - weed is not doing its jobs, check domains
 - document $() and %()
 - decide everything for cache and document it
 - document ifdef/ifndef/endif
 - document NNTP
+- document two digit year (year2/mail_year2), hostname tags
